fix: wrong colors

--- a/assets/stylesheets/sowp/_variables.scss
+++ b/assets/stylesheets/sowp/_variables.scss
@@ -7,8 +7,8 @@ $sowp-color-brand: #7a1a1a !default;
 $sowp-color-brand--accent: #d72626 !default;
 $sowp-color-brand--text: #000 !default;
 
-$sowp-color-light: #808080 !default;
-$sowp-color-light--accent: #d72626 !default;
+$sowp-color-light: #f0f0f0 !default;
+$sowp-color-light--accent: #808080 !default;
 $sowp-color-light--text: #4c4c4c !default;
 
 $sowp-color-dark: #4c4c4c !default;
